--- a/package.json
+++ b/package.json
@@ -3,13 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "cross-env NODE_ENV=production node server.js"
   },
   "dependencies": {
+    "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
+    "cross-env": "^7.0.3",
     "next": "10.0.3",
+    "next-routes": "^1.4.2",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "reactstrap": "^8.7.1",
+    "sass": "^1.30.0",
+    "save": "^2.4.0",
+    "scss": "^0.2.4"
   }
 }
