--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-routes": "^1.4.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-typed": "^1.2.0",
     "reactstrap": "^8.7.1",
     "sass": "^1.30.0",
     "save": "^2.4.0",
