--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "dotenv-webpack": "^1.7.0",
     "express": "^4.17.1",
     "express-openid-connect": "^2.1.0",
+    "framer-motion": "^3.1.1",
     "next": "10.0.3",
     "next-routes": "^1.4.2",
     "react": "17.0.1",
+    "react-datepicker": "^3.3.0",
     "react-dom": "17.0.1",
+    "react-hook-form": "^6.13.1",
     "react-typed": "^1.2.0",
     "reactstrap": "^8.7.1",
     "sass": "^1.30.0",
