--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
-    "start": "node_modules/next/dist/bin/next start -p $PORT"
+    "start": "cross-env NODE_ENV=production node server.js"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^0.11.0",
@@ -27,5 +27,8 @@
     "sass": "^1.30.0",
     "save": "^2.4.0",
     "scss": "^0.2.4"
+  },
+  "devDependencies": {
+    "webpack": "^5.21.1"
   }
 }
